--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@grammyjs/types": "^3.5.2",
     "@imgly/background-removal": "^1.3.0",
     "@lancedb/lancedb": "^0.22.3",
@@ -42,10 +43,12 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tavily/core": "^0.6.2",
     "@types/marked": "^5.0.2",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "better-sqlite3": "^12.5.0",
     "body-parser": "^2.2.1",
     "bullmq": "^5.66.0",
     "cors": "^2.8.5",
+    "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "elevenlabs": "^1.59.0",
     "express": "^5.1.0",
