fix(security): remove hardcoded API keys from test scripts
- Replaced hardcoded 'sk-silhouette-default' with process.env.API_KEY
- Added API_KEY to .env.example

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ DEBUG=false
 # The orchestrator cannot think without at least one provider.
 # Free tiers are available for Gemini and Groq.
 
+# API Key for internal services
+API_KEY=
+
 # Google Gemini — recommended, free tier available
 # Get key: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=
